--- a/src/components/animaIcons/upDown/style.less
+++ b/src/components/animaIcons/upDown/style.less
@@ -7,7 +7,7 @@
     vertical-align: middle;
     transform: rotateZ(180deg);
     .dot {
-        width: 3%;
+        width: 6px;
         height: 1px;
         background: #d1d1d1;
         max-width: 5px;
