--- a/src/components/musicPlayer/styles.module.less
+++ b/src/components/musicPlayer/styles.module.less
@@ -9,3 +9,8 @@
 .playerBox{
     height:52px
 }
+.musicItemBox{
+    display: grid;
+    grid-template-columns: auto 12px;
+    align-items: center;
+}
