--- a/src/style.less
+++ b/src/style.less
@@ -37,6 +37,9 @@
         width: 48px;
         position: sticky;
         top: 106px;
+        &:hover{
+            width: calc(100px + 100px);
+        }
     }
 }
 @media screen and (max-width: 630px) {
