--- a/src/components/HeaderNav/styles.less
+++ b/src/components/HeaderNav/styles.less
@@ -1,10 +1,8 @@
-// @import 'src/variables.less';
 .logo {
-    width: 120px;
+    width: 220px;
 }
 
 header {
-    // background-color: @light-bg1;
 }
 .activeNavOld{
     transform: translateX(12px);
@@ -20,6 +18,9 @@ header {
         border-radius: 12px;
         
     }
+    .ionicon{
+        color:aqua;
+    }
 }
 .activeNavOldNoB{
     transform: translateX(12px);
@@ -33,6 +34,9 @@ header {
         transition: all 0.5s ease-out;
         width: calc(100% - 12px);
         padding-left: 24px;
+        a{
+            color: #46a7a7;
+        }
         &::before{
             content: "";
             position: absolute;
@@ -46,9 +50,38 @@ header {
     }
 }
 @media screen and (max-width: 1400px) {
+    .activeNavFartherBox{
+        .moreIcon{
+            transition: all 0.3s ease-out;
+            transform: rotateZ(180deg);
+        }
+        &:hover{
+        background: none!important;
+        transform: translateX(0)!important;
+        padding-left: 0!important;
+        // .moreIcon{
+        //     transform: rotateZ(90deg);
+        // }
+        }
+    }
+    .activeNav{
+        padding: 0;
+        &:hover{
+            transform: translateX(0);
+            transition: all 0.5s ease-out;
+            width: calc(100%);
+            padding-left: 0;
+        }
+    }
     .navBox{
         span{
             display: none;
+        }
+        
+        &:hover{
+            span{
+                display: block;
+            }
         }
         .navBtn{
             padding: 12px 0;
@@ -57,6 +90,7 @@ header {
             }
         }
         .activeNavOld{
+            transform: translateX(0)!important;
             background: none!important; 
             transform: none; 
             transition: none; 
@@ -64,7 +98,7 @@ header {
             padding-left: 0!important;
         }
         .navBtn{
-            pointer-events: none;
+            // pointer-events: none;
     
         }
         li, li div,.logout{
@@ -76,5 +110,6 @@ header {
         .moreIcon{
             display: none;
         }
+        
     }
 }
