完善音乐播放器功能，以及增加更多交互方法

--- a/src/components/HeaderNav/styles.less
+++ b/src/components/HeaderNav/styles.less
@@ -1,6 +1,6 @@
 // @import 'src/variables.less';
 .logo {
-    width: 120px;
+    width: 32px;
 }
 
 header {
@@ -64,7 +64,7 @@ header {
             padding-left: 0!important;
         }
         .navBtn{
-            pointer-events: none;
+            // pointer-events: none;
     
         }
         li, li div,.logout{
