--- a/src/components/animaIcons/upDown/style.less
+++ b/src/components/animaIcons/upDown/style.less
@@ -15,19 +15,39 @@
         // border-top-left-radius: 50%;
     }
     .dot1 {
-        background: #46a7a7;
-        -webkit-animation: dot-up-down .8s .8s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
-        animation: dot-up-down .8s .8s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+        background: #ffffff;
+        -webkit-animation: dot-up-down2 .8s .8s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+        animation: dot-up-down2 .8s .8s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
     }
     .dot2 {
-        background: #267575;
+        background: #ffffff93;
         -webkit-animation: dot-up-down .5s .5s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
         animation: dot-up-down .5s .5s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
     }
     .dot3 {
-        background: #42d4d4;
-        -webkit-animation: dot-up-down 1s 1s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
-        animation: dot-up-down 1s 1s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+        background: #ffffff2c;
+        -webkit-animation: dot-up-down2 1s 1s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+        animation: dot-up-down2 1s 1s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+    }
+    .dot4 {
+        background: #ffffff;
+        -webkit-animation: dot-up-down2 .8s .8s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+        animation: dot-up-down2 .8s .8s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+    }
+    .dot5 {
+        background: #ffffff2c;
+        -webkit-animation: dot-up-down2 1.5s 1.5s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+        animation: dot-up-down2 1.5s 1.5s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+    }
+    .dot6 {
+        background: #ffffffa6;
+        -webkit-animation: dot-up-down2 2s 2s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+        animation: dot-up-down2 2s 2s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+    }
+    .dot7 {
+        background: #ffffff2c;
+        -webkit-animation: dot-up-down2 .8s .8s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
+        animation: dot-up-down2 .8s .8s cubic-bezier(0.77,0.47,0.64,0.28) alternate infinite;
     }
 }
 
@@ -39,6 +59,21 @@
 
     50% {
         height: 12px;
+    }
+    100% {
+        height: 1px;
+    }
+}
+@keyframes dot-up-down2 {
+    0% {
+        height: 1px;
+    }
+
+    70% {
+        height: 24px;
+    }
+    100% {
+        height: 1px;
     }
 }
 
