--- a/src/pages/home/components/timeWeather/styles.module.less
+++ b/src/pages/home/components/timeWeather/styles.module.less
@@ -2,7 +2,7 @@
     margin: 0;
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr 45px;
+    grid-template-columns: 1fr auto;
     grid-template-rows: auto 45px;
     align-items: center;
     .item2_inner3_inner2_inner1{
@@ -16,6 +16,7 @@
         }
     }
     .item2_inner3_inner2_inner2{
+        text-align: end;
     }
     .item2_inner3_inner2_inner3{
         font-size: 14px;
