--- a/src/style.less
+++ b/src/style.less
@@ -1,3 +1,6 @@
+main{
+    padding:24px
+}
 .noticeBtn{
     width: 34px;
     height: 34px;
@@ -28,8 +31,14 @@
     }
 }
 .contentBox{
-    height: calc(100vh - 130px);
+    height: calc(100vh - 110px);
     overflow-y: auto;
+}
+
+aside{
+    width:15vw;
+    min-width: 48px;
+    height: calc(100vh - 110px);
 }
 
 @media screen and (max-width: 1400px) {
@@ -40,7 +49,35 @@
     }
 }
 @media screen and (max-width: 630px) {
+    main{
+        padding:12px
+    };
+    .contentBox {
+        height: auto;
+        overflow: hidden;
+    }
     aside{
         display: none;
+    }
+    .smallMusicPlayer{
+        position: fixed;
+        bottom: 5px;
+        left: 10px;
+        width: calc(100vw - 20px);
+        height: 68px;
+        background-color: #c4c8c9;
+        border-top: 1px solid #eee;
+        padding: 12px;
+        box-sizing: border-box;
+        z-index: 100;
+        border-radius: 12px;
+        &>div{
+            width: 100%;
+            &>div{
+                width: 100%;
+                display: grid;
+                grid-template-columns: auto 46px;
+            }
+        }
     }
 }
