--- a/src/components/animaIcons/loader/style.less
+++ b/src/components/animaIcons/loader/style.less
@@ -5,7 +5,7 @@
     border-radius: 50%;
     padding: 6px;
     display: flex;
-    justify-content: space-between;
+    justify-content:center;
     vertical-align: middle;
     
     .dot {
@@ -13,6 +13,7 @@
         height: 5px;
         background: #d1d1d1;
         border-radius: 50%;
+        margin: 0 1px;
     }
     .dot1 {
         left: 0;
