--- a/src/components/musicPlayer/components/audioPlayer/style.module.less
+++ b/src/components/musicPlayer/components/audioPlayer/style.module.less
@@ -1,6 +1,9 @@
 .audioPlayerBox{
+    width: 100%;
     position: relative;
-    display: grid;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     img{
         width:48px;
         height:48px;
@@ -32,6 +35,20 @@
     img{
         animation: none;
     }
+}
+.audioPlayerControl{
+    width: 100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    &>div{
+        margin: 0 12px;
+        font-size: 28px;
+        &:nth-child(2){
+            font-size: 36px;
+        }
+    }
+
 }
 @keyframes audioPlayer {
     0% {
