--- a/src/components/smallMusicPlayer/components/audioPlayer/style.module.less
+++ b/src/components/smallMusicPlayer/components/audioPlayer/style.module.less
@@ -1,27 +1,48 @@
 .audioPlayerBox{
     position: relative;
     display: grid;
-    img{
-        width:48px;
-        height:48px;
-        border-radius: 50px;
-        animation: audioPlayer 2s linear;
-        animation-iteration-count: infinite;
-        
+    margin-right: 12px;
+    .imgBox{
+        img{
+            width:48px;
+            height:48px;
+            border-radius: 50px;
+            margin-top: 4px;
+            animation: audioPlayer 3.5s linear;
+            animation-iteration-count: infinite;
+            position: relative;
+            border: 1px solid #272727;
+            box-shadow: 0px 0px 4px #747474;
+        }
+        &::after{
+            content: '';
+            position: absolute;
+            width: 12px;
+            height: 12px;
+            border-radius: 50px;
+            background-color: #c4c7c7;
+            z-index: 1;
+            top: calc(50% - 5px);
+            left: calc(50% - 5px);
+            outline: 4px solid #00000065;
+        }
     }
+    
     audio{
         position: absolute;
 
     }
     .audioPlayer{
         transition: all 0.5s ease-out;
+        img{
+            width: 42px;
+            height: 42px
+        }
     };
     .audioPlayerInfo{
-        width: 150px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        margin-bottom: 7px;
+        display: grid;
+        grid-template-rows: 1fr 20px;
+        grid-template-areas: "name" "lyric";
     };
 }
 .stopAudio{
@@ -39,6 +60,11 @@
 }
 .musicName{
     min-width: 100px;
+    margin-right: 12px;
+}
+.lyricBox{
+    font-size: 12px;
+    opacity: .6;
 }
 @keyframes audioPlayer {
     0% {
