--- a/src/pages/home/components/examCountdown/styles.module.less
+++ b/src/pages/home/components/examCountdown/styles.module.less
@@ -1,12 +1,26 @@
+.cardOutBox{
+    &::after{
+        content: '';
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        z-index: 0;
+    }
+}
+
 .item2_inner2{
     height:100%;
     display: grid;
     grid-template-rows: 1fr 45px;
     align-items: center;
     position: relative;
+    transition: all 1s ease-in-out;
     .item2_inner2_inner1{
         font-size: 58px;
         text-align: center;
+        pointer-events: none;
     }
     .editIcon{
         position: absolute;
@@ -41,11 +55,19 @@
 
 
 
-@media screen and (max-width: 630px) {
+@media screen and (min-width: 420px) {
     .item2_inner2{
         height:100%;
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
+    }
+}
+@media screen and (min-width: 1400px) {
+    .item2_inner2{
+        height:100%;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 45px;
     }
 }
