--- a/src/pages/home/styles.less
+++ b/src/pages/home/styles.less
@@ -5,6 +5,7 @@
     display: grid;
     grid-template-columns: 240px 1fr;
     column-gap: 25px;
+    
   }
 #waterfall-container {
     // display: grid;
@@ -14,6 +15,14 @@
     grid-template-columns: repeat(auto-fill, calc(50% - 15px));
     align-items: start;
     justify-content: space-between;
+    user-select: none;
+    -webkit-touch-callout: none;
+    // -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
   }
 .leftBox{
     margin-bottom: 25px;
@@ -28,12 +37,12 @@
     
 }
 .item1{
-    height:370px;
+    height:430px;
     display:grid;
     grid-template-columns: 1fr 224px;
-    grid-row-end: span calc(75 + 5);
+    grid-row-end: span calc(86 + 5);
     &>div{
-        height:370px;
+        height:430px;
     };
     h1{
         letter-spacing: 12px;
@@ -125,10 +134,10 @@
 }
 .item4{
     height:370px;
-    grid-row-end: span calc(75 + 5);
+    grid-row-end: span calc(69 + 5);
 }
 .item5{
-    height:240px;
+    height:296px;
     grid-row-end: span calc(48 + 5);
 }
 
@@ -167,7 +176,7 @@
 //news--------------------------------------------------------------
 .newsBox{
     ul{
-        width: 16em;
+        width: 19.5em;
     }
 }
 .newsItemBox{
@@ -200,7 +209,7 @@
         .screen_mid_inner1{
             height:180px;
             grid-row-end: span calc(36 + 5);
-            justify-content: space-between;
+            justify-content: space-around;
             img{
                 height: 5em;
                 width: 5em;
@@ -312,10 +321,10 @@
 }
 
 
-@media screen and (max-width: 630px) {
+@media screen and (max-width: 620px) {
     .screen_mid{
         display: grid;
-        height: 360px;
+        height: 410px;
         grid-row-end: span calc(77 + 5);
         grid-auto-rows: 5px;
         grid-template-columns: 1fr;
@@ -330,6 +339,15 @@
                 height: 5em;
                 width: 5em;
                 border-radius: 50px;
+            }
+            
+            h4{
+                font-size: 24px;
+            }
+            span{
+                font-size: 14px;
+                margin-top: 6px;
+                display: block;
             }
         }
         .screen_mid_inner2{
@@ -349,7 +367,7 @@
     }
     .item1{
         grid-template-columns:1fr;
-        grid-template-rows: 200px 1fr;
+        grid-template-rows: 244px 1fr;
         &>div:first-child{
             img{
                 border-radius: 0;
@@ -366,25 +384,56 @@
         }
     }
     .item2{
-        height: 480px;
+        height: 530px;
         grid-row-end: span calc(102 + 5);
         grid-template-columns: 1fr;
     }
     .item3{
         grid-template-columns:1fr;
-        height: 480px;
+        height: 530px;
         grid-row-end: span calc(102 + 5);
+        .newsItemBox{
+            span:first-child{
+                font-size: 16px;
+                
+            }
+            span:last-child{
+                font-size: 14px;
+            }
+        }
+        .messageInnerBox{
+            div:first-child{
+                font-size: 16px;
+                line-height: 1.5;
+            }
+            div:last-child{
+                font-size: 14px;
+            }
+        }
     }
+    
     .item5{
         height:340px;
+        grid-row-end: span calc(70 + 5);
         &>div:first-child>div:last-child{
             span{
                 display: none;
             }
         }
+        &>div:first-child>div{
+            display: flex;
+            justify-content: space-between;
+        }
+        &>div:first-child{
+            display: grid;
+            grid-template-rows: auto 1fr;
+            grid-template-columns: 1fr;
+            row-gap: 12px;
+        }
         &>div:last-child{
             grid-template-columns: 1fr;
             grid-template-rows: 1fr 32px 1fr;
+            height: calc(100% - 86px);
         }
 
     }
@@ -392,9 +441,16 @@
         display: none;
     }
     .item3 .item3_inner1{
-        width: calc(100vw - 48px);
+        width: calc(100vw - 24px);
     }
     .newsBox ul{
         width: 100%;
+    }
+}
+
+@media screen and (max-width: 1400px){
+    .item4{
+        margin-bottom: 25px;
+        grid-row-end: span calc(69 + 10);
     }
 }
