--- a/src/components/musicPlayer/styles.module.less
+++ b/src/components/musicPlayer/styles.module.less
@@ -38,7 +38,7 @@
     height: 100vh;
     display: grid;
     grid-template-rows: 12px auto;
-    transition: all .2s ease-in-out;
+    transition: all 1.2s ease-in-out;
     overflow: hidden;
     .showArea_contentBox_backImg{
         /* 应用模糊滤镜 */
