--- a/src/style.less
+++ b/src/style.less
@@ -40,7 +40,115 @@ aside{
     min-width: 48px;
     height: calc(100vh - 110px);
 }
-
+.mobile_Nav_out_box,.mobile_Nav_out_box_open{
+    
+    display: none;
+    position: absolute;
+    top: 61px;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    height: 0;
+    z-index: 99;
+    transition: height .4s ease-in-out;
+    &::before{
+        pointer-events:none;
+        content: "";
+        position: fixed;
+        top: 62px;
+        left: 0;
+        width: 100%;
+        height: calc(100% - 62px);
+        background-color: #c5e3ff54;
+        z-index: -1;
+        opacity: 0;
+        transition: opacity .2s ease-in-out .4s;
+    }
+    .mobile_Nav_box{
+        border-top: 1px solid #eee;;
+        padding: 32px 64px;
+        width: 100%;
+        border-bottom-right-radius: 12px;
+        border-bottom-left-radius: 12px;
+        z-index: 99;
+        
+    }
+}
+.notice_out_box{
+    
+    // position: absolute;
+    // top: 61px;
+    // width: 100%;
+    // overflow: hidden;
+    // height: 0;
+    // width: fit-content;
+    // z-index: 99;
+    position: fixed;
+    top: 60px;
+    width: 100vw;
+    right: 0;
+    width: 100%;
+    height: calc(100vh - 62px);
+    /* width: fit-content; */
+    z-index: -1;
+    &::before{
+        pointer-events:none;
+        content: "";
+        position: fixed;
+        top: 62px;
+        left: 0;
+        width: 100%;
+        height: calc(100% - 62px);
+        background-color: #c5e3ff54;
+        z-index: -1;
+        opacity: 0;
+        transition: opacity .2s ease-in-out .2s;
+    }
+    // transition: all .4s ease-in-out .1s;
+    .notice_box{
+        position: absolute;
+        right: 12px;
+        top: 12px;
+        max-height: calc(100vh - 110px);
+        max-width: 480px;
+        border-radius: 12px;
+        z-index: 99;
+        transition: all 0.4s ease-in-out;
+        li{
+            border-bottom: 1px solid #eee;
+            padding: 24px 0;
+            h4{
+                font-size: medium;
+                font-weight: 800;
+            }
+            ion-icon{
+                font-size: 20px;
+            }
+            &:first-child{
+                padding-top: 0;
+            }
+            &:last-child{
+                border: none;
+                padding-bottom: 0;
+            }
+            p:last-child{
+                font-size: smaller;
+            }
+        }
+    }
+}
+.notice_out_box_open{
+    // height: calc(100vh - 62px);
+    &::before{
+        opacity: 1;
+        transition: opacity .2s ease-in-out;
+    }
+    .notice_box{
+        width: 320px;
+        height: auto;
+        
+    }
+}
 @media screen and (max-width: 1400px) {
     aside{
         width: 48px;
@@ -83,4 +191,26 @@ aside{
             }
         }
     }
+    .mobile_Nav_out_box{
+        display: block;
+    }
+    .mobile_Nav_out_box_open{
+        height: calc(100vh - 62px);
+        transition: height .4s ease-in-out .2s;
+        &::before{
+            opacity: 1;
+            transition: opacity .2s ease-in-out;
+        }
+    }
+    .notice_out_box_open{
+        // height: calc(100vh - 62px);
+        &::before{
+            opacity: 1;
+            transition: opacity .2s ease-in-out;
+        }
+        .notice_box{
+            width: calc(100vw - 24px);
+        }
+    }
 }
+
