--- a/src/components/HeaderNav/styles.less
+++ b/src/components/HeaderNav/styles.less
@@ -1,6 +1,6 @@
 .logo {
     width: 32px;
-    
+    margin: 0 12px;
 }
 
 header {
@@ -128,6 +128,9 @@ header {
     }
 }
 @media screen and (max-width:640px) {
+    .logo{
+        margin: 0;
+    }
     .activeNavFartherBox{
         background:none!important;
         &:hover{
