--- a/src/style.less
+++ b/src/style.less
@@ -43,7 +43,7 @@ aside{
 .mobile_Nav_out_box,.mobile_Nav_out_box_open{
     
     display: none;
-    position: absolute;
+    position: fixed;
     top: 61px;
     left: 0;
     width: 100%;
@@ -75,7 +75,8 @@ aside{
     }
 }
 .notice_out_box{
-    
+    opacity: 0;
+    pointer-events:none;
     // position: absolute;
     // top: 61px;
     // width: 100%;
@@ -90,7 +91,12 @@ aside{
     width: 100%;
     height: calc(100vh - 62px);
     /* width: fit-content; */
-    z-index: -1;
+    z-index: 99;
+    // opacity: 0;
+    transition: opacity .5s ease-in-out;
+    // &>div{
+    //     height: calc(100vh - 158px);
+    // }
     &::before{
         pointer-events:none;
         content: "";
@@ -101,8 +107,7 @@ aside{
         height: calc(100% - 62px);
         background-color: #c5e3ff54;
         z-index: -1;
-        opacity: 0;
-        transition: opacity .2s ease-in-out .2s;
+        
     }
     // transition: all .4s ease-in-out .1s;
     .notice_box{
@@ -113,8 +118,12 @@ aside{
         max-width: 480px;
         border-radius: 12px;
         z-index: 99;
-        transition: all 0.4s ease-in-out;
+        // transition: all 0.4s ease-in-out;
+        &>div{
+            max-height: calc(100vh - 158px);
+        }
         li{
+            overflow-x: hidden;
             border-bottom: 1px solid #eee;
             padding: 24px 0;
             h4{
@@ -138,12 +147,11 @@ aside{
     }
 }
 .notice_out_box_open{
+    pointer-events: all;
+    opacity: 1;
     // height: calc(100vh - 62px);
-    &::before{
-        opacity: 1;
-        transition: opacity .2s ease-in-out;
-    }
     .notice_box{
+        padding: 24px;
         width: 320px;
         height: auto;
         
@@ -163,6 +171,9 @@ aside{
     main{
         padding:12px
     };
+    .noticeBtn_after{
+        margin-right: 0;
+    }
     .contentBox {
         height: auto;
         overflow: hidden;
@@ -204,13 +215,34 @@ aside{
     }
     .notice_out_box_open{
         // height: calc(100vh - 62px);
-        &::before{
-            opacity: 1;
-            transition: opacity .2s ease-in-out;
-        }
+        // &::before{
+        //     opacity: 1;
+        //     transition: opacity .2s ease-in-out;
+        // }
         .notice_box{
             width: calc(100vw - 24px);
         }
     }
+    // .notice_out_box{
+    //     // pointer-events:none;
+    //     // position: absolute;
+    //     // top: 61px;
+    //     // width: 100%;
+    //     // overflow: hidden;
+    //     // height: 0;
+    //     // width: fit-content;
+    //     // z-index: 99;
+    //     position: fixed;
+    //     top: 60px;
+    //     width: 100vw;
+    //     right: 0;
+    //     width: 100%;
+    //     height: calc(100vh - 62px);
+    //     /* width: fit-content; */
+    //     z-index: 99;
+    //     &>div{
+    //         height: calc(100vh - 158px);
+    //     }
+    // }
 }
 
