--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -37,6 +37,9 @@
     .bg3{
         background-color: #f3f3f3;
     }
+    .bg_gray{
+        background-color: #cecece;
+    }
     table{
         background-color: #cccccc;
     }
@@ -168,6 +171,9 @@
     }
     .bg3{
         background-color: #4c4c4c;
+    }
+    .bg_gray{
+        background-color: #444444;
     }
     table{
         background-color: #36383b;
